Revert "Adds new redfish unit testing for serviceroot"
This reverts commit d8f8b2ef4c73f38ec466861b753b71eaabae271c.

Reason for revert: Broke the build.  Other patches got reverted.

Change-Id: I4922f516ca08660f5fdc725b2c3ec8831386b4dd

--- a/meson.build
+++ b/meson.build
@@ -405,8 +405,7 @@ srcfiles_unittest = [
   'redfish-core/ut/time_utils_test.cpp',
   'redfish-core/ut/stl_utils_test.cpp',
   'redfish-core/ut/hex_utils_test.cpp',
-  'http/ut/utility_test.cpp',
-  'redfish-core/lib/ut/service_root_test.cpp',
+  'http/ut/utility_test.cpp'
 ]
 
 if(get_option('tests').enabled())
